--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.17.1",
+    "https-proxy-agent": "^5.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^5.12.4"
+    "mongoose": "^5.12.4",
+    "mongoose-findorcreate": "^3.0.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
